--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "redux-persist storage for Expo's SecureStore",
   "main": "src/index.js",
   "types": "src/index.d.ts",
-  "repository": "https://github.com:Cretezy/redux-persist-expo-securestore.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/robinderozario/redux-persist-expo-securestore"
+  },
   "author": "Charles Crete <charles@cretezy.com>",
   "license": "MIT",
   "scripts": {
